# Vibero

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
backend/: .gitignore  Dockerfile  requirements.txt
backend/api/: app.py  auth.py  index.py  store.py  types.py
backend/app/: main.py  main_old.py
backend/app/api/routes/: __init__.py
backend/app/core/: auth.py  database.py  deps.py  security.py
backend/app/core/services/store/: store_service.py
backend/app/models/: game.py  user.py
backend/app/routes/: auth.py
backend/app/utils/: auth_utils.py
frontend/: .gitignore  package-lock copy.json  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  main.jsx
frontend/src/api/: auth.js  client.js  index.js  users.js
frontend/src/components/: GameCard.jsx  Navbar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: GamePage.jsx  Home.jsx  Login.jsx  Register.jsx  UserStore.jsx
frontend/src/routes/: AppRoutes.jsx
vibero/adapters/db/: inmemory.py  models.py  postgres.py
vibero/api/: app.py  app_dor.py  user_games_store.py  users.py
vibero/core/: common.py  contextual_correlator.py  loggers.py  security.py  user_games_store.py  users.py
vibero/core/persistence/: common.py  document_database.py
vibero/tests/: conftest.py
vibero/tests/api/: test_users.py
